--- a/report.qmd
+++ b/report.qmd
@@ -1052,12 +1052,12 @@ interactive_time_series_plot
 
 **Discussion**
 
-- The plot (@fig-plots13) shows the total number of tourist trips over time, grouped by year and quarter. As can be seen, the trend is very fluctuatives from year to year. It seems that in Quarter 3 of 2003, Barkly region experienced the highest number of visit, while in contrast, Quarter 1 of 2022 and Quarter of 2018 have no visitor at all. By looking at this trend alone is not enough. The trend is to wide, making us unable to see any seasonality that could be utilised to extract insightful informations. Hence, we will dig deep into this temporal analysis in order to get full understanding on tourism pattern of Barkly region. 
+- The plot (@fig-plots13) shows the total number of tourist trips over time, grouped by year and quarter. As can be seen, the trend fluctuates significantly from year to year. Notably, Quarter 3 of 2003 saw the Barkly region record its peak number of visits, while in contrast, Quarter 1 of 2022 and Quarter of 2018 have no visitor at all. This broad trend doesn't provide enough granularity, making it challenging to identify any seasonality that might yield insightful information. Hence, we will delve deeper into this temporal analysis in order to get full understanding on tourism pattern of Barkly region. 
 
 
 #### Temporal Trends by Quarter
 
-Let's now move deeper by looking at the trend on quarterly basis. By considering quarter spectrum, here we will ignore the year component, we will combine each quarter from all year into one. Through this approach, we are hoping to reveal any pattern arises from the similarity of time. .....!!!!
+Let's explore the data further by looking at the trend on quarterly basis. By considering quarter spectrum, here we will ignore the year component, we will combine each quarter from all year into one. Through this approach, we are hoping to reveal any pattern arises from the similarity of time. .....!!!!
 
 The location of Barkly Region that is in the middle of the desert may also have a contribution to the number of tourism. Our intuition define a desert area will be very hot during summer, which make it a less suitable place to visit. It will be more suitable in the other season, hence probably one of the factor behind why it is a popular place to visit in Q3 (according to figure (...)). In the graph below, we will try to prove our intuiton by utilising the weather station data that has temperature data.
 
@@ -1115,11 +1115,11 @@ grid.arrange(qtr_tourism, qtr_temp, ncol = 2)
 
 **Discussion**
 
-- The left graph shows the number of tourism for each quarter, it clearly shows that Q3 has the highest number of tourism with more than 450('000) people travelling into Barkly, followed by Q2 with more than 250('000) people, Q4 with just below 250('000) people, and last, Q1 with just above than 100('000) people.
+- The left graph shows the number of tourism for each quarter, it's evident that Q3 attracts the most tourists, with over 450,000 people visiting Barkly, followed by Q2 with more than 250('000) people, Q4 with just below 250('000) people, and last, Q1 with just above than 100('000) people.
 
-- The right graph shows the trend of average temperature around Barkly region for each quarter. As can be seen that Q1 and Q4 temperature share a pretty similar range of temperature with around 30 degree, while Q2 and Q3 also share similar temperature with around 20 degree. We can conclude that Q2 and Q3 is colder than the other quarter. This is align with the seasonal condition in Australia, where Q1 is the period of summer to fall (higher temperature), Q2 is fall to winter (lower temperature), Q3 is winter to spring (lower temperature), and Q4 is spring to summer (higher temperature).
+- The right graph depicts the average temperature trends around Barkly region for each quarter. As can be seen that Q1 and Q4 temperature share a pretty similar range of temperature with around 30 Celsius degree, while Q2 and Q3 hover around a cooler 20 Celsius degree. This is align with the seasonal condition in Australia, where Q1 is the period of summer to fall (higher temperature), Q2 is fall to winter (lower temperature), Q3 is winter to spring (lower temperature), and Q4 is spring to summer (higher temperature).
 
-- So, based on two points above, it seems that our intuition is correct. Since Barkly is located in the desert landscape, it is true that during Q3 the temperature are lower, which is more suitable for tourist to visit this area, thus may contribute to the number of tourism. In contrast, Q1 experienced the least number of tourism which may be cause by higher temperature to the area.   
+- Based on above observations, it appears our initial assumption was accurate. Given the desert landscape of Barkly, it's plausible that the milder temperatures in Q3 make it a more attractive time for tourists. In contrast, Q1 experienced the lowest number of tourism which potentially caused by higher temperature to the area.   
 
 
 #### Temporal Trends by Quarter for Different Purposes
