--- a/report.qmd
+++ b/report.qmd
@@ -1004,13 +1004,27 @@ sighting frequency of the plant.
 
 ### Tourism vs Occurences
 
-In this section, we aim to correlate the number of sightings of Weeping Mulla Mulla with the number of tourists in the area of the sightings. Is the number of sightings influenced by nearby tourism activities? Does the increasing number of visit resulted in increasing number of Weeping Mulla Mulla sightings? Let's explore the data that we have to understand that. 
+In this section, we aim to correlate the number of sightings of 
+Weeping Mulla Mulla with the number of tourists in the area of the sightings. 
+Is the number of sightings influenced by nearby tourism activities? 
+Does the increasing number of visit resulted in increasing number of 
+Weeping Mulla Mulla sightings? Let's explore the data that we have to 
+understand that. 
 
-By continuing our earlier observations, we will now focus on the area with the most recorded sightings, which, as mentioned in the previous section, is close to the Tennant Creek Airport weather station. By utilising data from Australian Bureau of Statistics of SA2, we identified that Tennant Creek Airport is located in the region of Barkly, Northern Territory. Therefore, our subsequent analysis will concentrate solely on the Barkly region.
+By continuing our earlier observations, we will now focus on the area with 
+the most recorded sightings, which, as mentioned in the previous section, 
+is close to the Tennant Creek Airport weather station. By utilizing data from 
+Australian Bureau of Statistics of SA2, we identified that Tennant Creek Airport 
+is located in the region of Barkly, Northern Territory. 
+
+Therefore, our subsequent analysis will concentrate solely on the Barkly region.
 
 #### Tourism Pattern
 
-Before we dive deep into the correlation analysis of occurences and tourism, we would like to explore the tourism data first. It is important to profile our data first, as most of the time they provide a deeper understanding and can sharpen our analysis later.
+Before we dive deep into the correlation analysis of occurrences and tourism,
+we would like to explore the tourism data. It is important to profile 
+our data first, as most of the time they provide a deeper understanding and 
+can sharpen our analysis later.
 
 ##### Trend of Tourist Over Time 
 
@@ -1052,14 +1066,30 @@ interactive_time_series_plot
 
 **Discussion**
 
-- The plot (@fig-plots13) shows the total number of tourist trips over time, grouped by year and quarter. As can be seen, the trend fluctuates significantly from year to year. Notably, Quarter 3 of 2003 saw the Barkly region record its peak number of visits, while in contrast, Quarter 1 of 2022 and Quarter of 2018 have no visitor at all. This broad trend doesn't provide enough granularity, making it challenging to identify any seasonality that might yield insightful information. Hence, we will delve deeper into this temporal analysis in order to get full understanding on tourism pattern of Barkly region. 
+- The plot (@fig-plots13) shows the total number of tourist trips over time, 
+grouped by year and quarter. As can be seen, the trend fluctuates significantly 
+from year to year. Notably, Quarter 3 of 2003 saw the Barkly region record its 
+peak number of visits, while in contrast, Quarter 1 of 2022 and Quarter of 
+2018 have no visitor at all. This broad trend doesn't provide enough 
+granularity, making it challenging to identify any seasonality that might 
+yield insightful information. Hence, we will delve deeper into this temporal 
+analysis in order to get full understanding on tourism pattern of Barkly region. 
 
 
 #### Temporal Trends by Quarter
 
-Let's explore the data further by looking at the trend on quarterly basis. By considering quarter spectrum, here we will ignore the year component, we will combine each quarter from all year into one. Through this approach, we are hoping to reveal any pattern arises from the similarity of time. .....!!!!
+Let's explore the data further by looking at the trend on quarterly basis. 
+By considering quarter spectrum, here we will ignore the year component, we 
+will combine each quarter from all year into one. Through this approach, we are 
+hoping to reveal any pattern arises from the similarity of time. .....!!!!
 
-The location of Barkly Region that is in the middle of the desert may also have a contribution to the number of tourism. Our intuition define a desert area will be very hot during summer, which make it a less suitable place to visit. It will be more suitable in the other season, hence probably one of the factor behind why it is a popular place to visit in Q3 (according to figure (...)). In the graph below, we will try to prove our intuiton by utilising the weather station data that has temperature data.
+The location of Barkly Region that is in the middle of the desert may also 
+have a contribution to the number of tourism. Our intuition define a desert area 
+will be very hot during summer, which make it a less suitable place to visit. 
+It will be more suitable in the other season, hence probably one of the factor 
+behind why it is a popular place to visit in Q3 (according to figure (@fig-plots13)). 
+In the graph below, we will try to prove our intuiton by utilising the weather 
+station data that has temperature data.
 
 ```{r trend, warning = FALSE, message = FALSE , echo=FALSE}
 
@@ -1115,16 +1145,36 @@ grid.arrange(qtr_tourism, qtr_temp, ncol = 2)
 
 **Discussion**
 
-- The left graph shows the number of tourism for each quarter, it's evident that Q3 attracts the most tourists, with over 450,000 people visiting Barkly, followed by Q2 with more than 250('000) people, Q4 with just below 250('000) people, and last, Q1 with just above than 100('000) people.
+- The left graph in (@fig-plots14) shows the number of tourism for each quarter, 
+it's evident that Q3 attracts the most tourists, with over 450,000 people 
+visiting Barkly, followed by Q2 with more than 250('000) people, 
+Q4 with just below 250('000) people, and last, Q1 with just above than 
+100('000) people.
 
-- The right graph depicts the average temperature trends around Barkly region for each quarter. As can be seen that Q1 and Q4 temperature share a pretty similar range of temperature with around 30 Celsius degree, while Q2 and Q3 hover around a cooler 20 Celsius degree. This is align with the seasonal condition in Australia, where Q1 is the period of summer to fall (higher temperature), Q2 is fall to winter (lower temperature), Q3 is winter to spring (lower temperature), and Q4 is spring to summer (higher temperature).
+- The right graph in (@fig-plots14) depicts the average temperature trends 
+around Barkly region for each quarter. As can be seen that Q1 and Q4 
+temperature share a pretty similar range of temperature with around 
+30 Celsius degree, while Q2 and Q3 hover around a cooler 20 Celsius degree. 
+This is align with the seasonal condition in Australia,
+where Q1 is the period of summer to fall (higher temperature), 
+Q2 is fall to winter (lower temperature), Q3 is winter to spring (lower temperature), 
+and Q4 is spring to summer (higher temperature).
 
-- Based on above observations, it appears our initial assumption was accurate. Given the desert landscape of Barkly, it's plausible that the milder temperatures in Q3 make it a more attractive time for tourists. In contrast, Q1 experienced the lowest number of tourism which potentially caused by higher temperature to the area.   
+- Based on above observations, it appears our initial assumption was accurate. 
+Given the desert landscape of Barkly, it's plausible that the milder 
+temperatures in Q3 make it a more attractive time for tourists. In contrast, 
+Q1 experienced the lowest number of tourism which potentially caused by higher 
+temperature to the area.   
 
 
 #### Temporal Trends by Quarter for Different Purposes
 
-Now we are going to look at how the tourism activities varies across multiple categories, including holidays, business activities, leisurely visits, and other significant reasons. By looking at this spectrum, we will be able to gain valuable insights into what sort of activities that tourist intended to do in Barkly region, helping us to shape our understanding towards this analysis in general. The graph below will provide us with such information.
+Now we are going to look at how the tourism activities varies across 
+multiple categories, including holidays, business activities, leisurely visits, 
+and other significant reasons. By looking at this spectrum, we will be able to 
+gain valuable insights into what sort of activities that visiters intended 
+to do in Barkly region, helping us to shape our understanding towards 
+this analysis in general. The graph below will provide us with such information.
 
 ```{r quarter-trend, warning = FALSE ,  message = FALSE}
 #| label: fig-plots15
@@ -1154,24 +1204,49 @@ temporal_plot <- tourism %>%
 temporal_plotly <- ggplotly(temporal_plot)
 
 temporal_plotly
-
 ```
 
 **Discussion**
 
-According to the graph above, we can see clearly that all purposes follow the fluctuative trend, align with the previous graph. It seems like "Holiday" experienced the most fluctuation, with "Other" is the most steady. From the quantity perspective, "Holiday" come out on top as the main reason, followed by "Business", "Visiting", and "Other". From this graph, we can conclude the Barkly is one of the place to go to when people decide where to spend their holiday to. We are interested to check if Weeping Mulla Mulla eco-tourism is one of the deciding factor.
+According to the (@fig-plots15) above, it's evident that all the graphs 
+representing different trip purposes display a fluctuating trend, consistent 
+with the (@fig-plots14) graph. It seems like "Holiday" experienced the most 
+fluctuation, with "Other" is the most steady. From the quantity perspective, 
+"Holiday" come out on top as the main reason, followed by "Business", 
+"Visiting", and "Other". From this graph, we can conclude the Barkly is one of 
+the popular destination when people decide where to spend their holiday to. 
+We are interested to determine if Weeping Mulla Mulla eco-tourism is one of 
+the a contributing factor to this trend.
 
-In the next section, we will utilise all these informations we gather around the tourism trend in Barkly region to compare it with Occurences dataset. We hope to see if there is any specific eco-tourism related to Weeping Mulla Mulla that may have contributed to the significant volume over the number of tourism into Barkly region. 
+In the next section, we will utilize all the information we gather around the 
+tourism trend in Barkly region to compare it with Occurrences dataset. Our goal
+is to determine if there is any specific eco-tourism related to Weeping 
+Mulla Mulla that may have contributed to the significant volume over the number
+of tourism into Barkly region. 
 
 ### Weeping Mulla Mulla Eco-Tourism
 
-In this part, we will shift our focus into finding the correlation between the sightings of Weeping Mulla Mulla with the number of tourism of Barkly region. We will expose any hinder pattern that could not be spotted just by looking at the data separately. Let's unveil it!   
+In this part, we will shift our focus into finding the correlation between the 
+sightings of Weeping Mulla Mulla with the number of tourism of Barkly region. 
+We will expose any hinder pattern that could not be spotted just by looking at 
+the data separately. Let's unveil it!   
 
 #### Ecotourist interest in Weeping Mulla Mulla
 
-Before we employ data analysis to reveal any insights regarding this topic, we perform a thorough research on the Weeping Mulla Mulla eco-tourism. Unfortunately, after spending hours looking, there is no single information leading us to any news/articles/announcements related to it, not even local government website. There is no single advertisement by tour & travel organisation that specifically offer an eco-tourism to Barkly region for Weeping Mulla Mulla. So, we are going to rely on the data that we have and look for any pattern that we can expose.  
+Before we employ data analysis to reveal any insights regarding this topic, 
+we perform a thorough research on the Weeping Mulla Mulla eco-tourism. 
+Unfortunately, after spending hours looking, there is no single information 
+leading us to any news/articles/announcements related to it, not even local 
+government website. There is no single advertisement by tour & travel 
+organisation that specifically offer an eco-tourism to Barkly region for 
+Weeping Mulla Mulla. As such, our analysis will be based on the data we have 
+on hand, aiming to discern any significant patterns.
 
-Now, We move on into the data analysis part. Firstly, we narrow down the necessary data related to eco-tourism interest of Weeping Mulla Mulla by filtering out Trips with "Holiday" purpose only. We assume that people who has spotted and reported the occurences are on their vacation, hence the selection of variable `Purpose` plays a role here.
+We now move on into the data analysis part. Firstly, we narrow down the 
+necessary data related to eco-tourism interest of Weeping Mulla Mulla by 
+filtering out Trips with "Holiday" purpose only. We assume that people who 
+has spotted and reported the occurrences are on their vacation, hence the 
+selection of variable `Purpose` plays a role here.
 
 ```{r Ecotourism, message = FALSE, warning = FALSE}
 #| label: fig-plots17
@@ -1205,20 +1280,29 @@ ggplotly(corr_plot, tooltip = "text") %>%
                                     "Region : Barkly",
                                     "<sup>")),
    margin = list(l = 50, t = 75))
-
-
-
 ```
-
 
 **Discussion**
 
-Through a visual representation of number of tourist to number of sightings from the figure (@fig-plots17)), we can clearly see there is no correlation between them. The increasing number of visitor to Barkly is not followed by the increasing number of Weeping Mulla Mulla sightings. Quarter 3 of 2015, where the most sightings recorded, does not even record top 5 number of tourist visit. In contrast, Quarter 3 of 2019, only record 2 sightings while having the highest number of tourist visit. This indicates that Weeping Mulla Mulla observation is not one of the deciding factor people go to Barkly.
+Through a visual representation of number of tourist to number of sightings 
+from the figure (@fig-plots17), we can clearly see there is no correlation 
+between them. The increasing number of visitor to Barkly is not followed by 
+the increasing number of Weeping Mulla Mulla sightings. For instance, Quarter 3 
+of 2015, which recorded the top number of sightings, isn't even within the top 
+five quarters for tourist visits. In contrast, Quarter 3 of 2019, which had 
+the highest number of tourist visits, recorded only two sightings. This 
+indicates that Weeping Mulla Mulla observation potentially is not 
+one of the deciding factor people go to Barkly.
 
-Our current data doesn't provide enough support to solidify this connection, and it remains inconclusive whether the influx of visitors to Barkly was partially driven by the prominence of the Weeping Mulla Mulla. A more detailed perspective can be gained by examining the subsequent map, which will place Weeping Mulla Mulla's sightings with the number of trips to this regions. 
+Our current data doesn't provide enough support to solidify the connection 
+between Weeping Mulla Mulla and tourism number, and it remains inconclusive 
+whether the influx of visitors to Barkly was partially driven by 
+the prominence of the Weeping Mulla Mulla. A more detailed perspective 
+can be gained by examining the subsequent map, which will place 
+Weeping Mulla Mulla's sightings with the number of trips to this regions. 
 
 ```{r barkly_map, warning=FALSE, message=FALSE ,echo = FALSE}
-# Mapping occurences and trips tp Weeping Mulla Mulla areas
+# Mapping occurrences and trips to Weeping Mulla Mulla areas
 AU_region_subset <- AU_region %>%
                       st_crop(xmin = 131, xmax = 139, 
                               ymin = -23, ymax = -16)
@@ -1266,17 +1350,33 @@ map_p2 <- wmm_tourism %>%
                   plot.subtitle = element_text(hjust=0.5, face = "italic", size = 10)) +
             guides(size = FALSE) +
             labs(fill = "Number of Visiting Tourist")
-```
 
-```{r , warning=FALSE, message=FALSE ,echo = FALSE}
 grid.arrange(map_p2, map_p1, ncol = 2) 
 ```
 
 **Discussion**
 
-Expanding on our prior discussion, this map offers an insightful visualisation of the relationship between Weeping Mulla Mulla occurrences and tourism numbers. A bit different approach to previous analysis, in here, we are including all regions that recording occurence numbers. We did this because we want to see if the data tells opposite fact when we consider other regions. By utilising spatial analysis, it will provide holistic view and expedite the understanding process. On the map visual itself, the left side is a map where all regions where sightings are recorded, while on the right side is just Barkly region only.
+Building on our prior discussion, this map offers an insightful visualization
+of the relationship between Weeping Mulla Mulla occurrences and tourism numbers. 
+A bit different approach to previous analysis, in here, we are including 
+all regions that recording occurrence numbers. We did this because we want to see 
+if the data tells opposite fact when we consider other regions. 
+By utilizing spatial analysis, it will provide holistic view and expedite 
+the understanding process. On the map visual itself, the left side is a map 
+where all regions where sightings are recorded, while on the right side is 
+just Barkly region only.
 
-The map illustrates a prominent presence of Weeping Mulla Mulla in the North-central areas of Western Australia and parts of the Northern Territory. Notably, the regions with more number of tourist are presented with lighter color, and the opposite condition stand (where darker color represent fewer number of tourist). As can be seen, the regions with higher number of tourism are not the regions where the most sightings recorded. The number could just be contributed from other essential factors, such as popular attractions, infrastructural development, or easier accessibility. So, this spatial analysis supports our previous analysis which could not see any correlation between these two events. Ultimately, this also align with our research about Weeping Mulla Mulla eco-tourism which gave us no information.   
+The map illustrates a prominent presence of Weeping Mulla Mulla 
+in the North-central areas of Western Australia and parts of the Northern Territory. 
+Notably, the regions with more number of tourist are presented with lighter color, 
+and the opposite condition stand (where darker color represent fewer number of tourist). 
+As can be seen, the regions with higher number of tourism are not the regions 
+where the most sightings recorded. The number could just be contributed 
+from other essential factors, such as popular attractions, 
+infrastructural development, or easier accessibility. So, this spatial analysis 
+supports our previous analysis which could not see any correlation between 
+these two events. Ultimately, this also align with our research about 
+Weeping Mulla Mulla eco-tourism which gave us no information.   
 
 
 ## Summary
@@ -1318,6 +1418,11 @@ several key expectations:
     downpours. This observation aligns with the inherent nature of the
     **Weeping Mulla Mulla** as a desert plant that thrives without
     relying heavily on water.
+    
+6. **Tourism Pattern to Weeping Mulla Mulla area**: 
+
+
+7. **Weeping Mulla Mulla Eco-Tourism**
 
 In conclusion, the findings in this report affirm that the **Weeping
 Mulla Mulla** is an exceptionally unique and endemic plant, exclusively
