--- a/report.qmd
+++ b/report.qmd
@@ -1474,21 +1474,19 @@ map_p2 <- wmm_tourism %>%
 grid.arrange(map_p2, map_p1, ncol = 2) 
 ```
 
-```{r table}
-#| label: tab-detail
-#| tbl-cap: "Table Detail of Tourism & Occurences"
-#| fig-align: center
+```{r}
 #| echo: false
-#| fig-width: 12
-#| fig-heigth: 10
 
 wmm_tourism_dg %>%
     ungroup() %>%
     filter(Purpose == "Holiday") %>%
     mutate(Total_Sightings = sightings_tot) %>%
     select(state, region, Year, Quarter, Trips, Purpose, Total_Sightings) %>%
-    DT::datatable(width = "100%", height = "50%", options = list(scrollX = TRUE))
+    DT::datatable(width = "100%", height = "40%", options = list(scrollX = TRUE)) %>%
+    DT::formatStyle(columns = c(1, 2, 3, 4, 5, 6, 7), fontSize = '80%')
 ```
+
+\n
 
 **Discussion**
 
